Param helped to make it work

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <div style="color: red, font-weight: bold">Alert: Messages:</div>
     <div id="content">
     </div>
+    <button onclick="startJob()">start Job</button>
+    <button onclick="stopJob()">stop Job</button>
+    <button onclick="clearQueue()">clear</button>
 </body>
 </html>
