Param helped me add the unit tests

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
 </head>
 <body>
     <canvas id="myChart" width="800" height="600"></canvas>
-    <div style="color: red, font-weight: bold">Alert: Messages:</div>
-    <div id="content">
-    </div>
     <button onclick="startJob()">start Job</button>
     <button onclick="stopJob()">stop Job</button>
-    <button onclick="clearQueue()">clear</button>
+    <div style="color: red">Alert Messages:</div>
+    <div id="alert">
+    </div>
 </body>
 </html>
