--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <canvas id="myChart" width="1200" height="500"></canvas>
-    <button onclick="startJob()">start Job</button>
-    <button onclick="stopJob()">stop Job</button>
+    <button onclick="startJob()">Start Job</button>
+    <button onclick="stopJob()">Stop Job</button>
     <div style="color: red">Alert Messages:</div>
     <div id="alert">
     </div>
